STV-15 first sycle

--- a/stvsystem/stvsystem/Views/Judge/Template.cshtml
+++ b/stvsystem/stvsystem/Views/Judge/Template.cshtml
@@ -1,7 +1,92 @@
-﻿
+﻿@model stvsystem.Data.JudgeItem
 @{
-    ViewData["Title"] = "Template";
+    ViewData["Title"] = "Դատավոր";
+    Layout = "~/Views/Shared/_LayoutNull.cshtml";
 }
 
-<h2>Template</h2>
 
+@using (Html.BeginForm("Save", "Judge", FormMethod.Post, new { id = "frmResident" }))
+{
+    @Html.AntiForgeryToken()
+    @Html.HiddenFor(model => model.JudgeID)
+    <div class="container-maxwidth500">
+        <div class="card">
+            <div class="card-header">@ViewData["Title"]</div>
+            <div class="card-body">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.FirstName, new { @class = "control-label" })
+                    @Html.Kendo().TextBoxFor(model => model.FirstName).HtmlAttributes(new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.LastName, new { @class = "control-label" })
+                    @Html.Kendo().TextBoxFor(model => model.LastName).HtmlAttributes(new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.MiddleName, new { @class = "control-label" })
+                    @Html.Kendo().TextBoxFor(model => model.MiddleName).HtmlAttributes(new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.GenderID, new { @class = "control-label" })
+                    @(Html.Kendo().ComboBoxFor(model => model.GenderID)
+                        .DataTextField("Text")
+                        .DataValueField("Value")
+                        .Placeholder("-- Ընտրել --")
+                        .Filter(FilterType.StartsWith)
+                        .HtmlAttributes(new { @class = "form-control" })
+                        .BindTo(ViewBag.vbGenders)
+                    )
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.CourtID, new { @class = "control-label" })
+                    @(Html.Kendo().ComboBoxFor(model => model.CourtID)
+                        .DataTextField("Text")
+                        .DataValueField("Value")
+                        .Placeholder("-- Ընտրել --")
+                        .Filter(FilterType.StartsWith)
+                        .HtmlAttributes(new { @class = "form-control" })
+                        .BindTo(ViewBag.vbCourts)
+                    )
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.SpecializationID, new { @class = "control-label" })
+                    @(Html.Kendo().ComboBoxFor(model => model.SpecializationID)
+                        .DataTextField("Text")
+                        .DataValueField("Value")
+                        .Placeholder("-- Ընտրել --")
+                        .Filter(FilterType.StartsWith)
+                        .HtmlAttributes(new { @class = "form-control" })
+                        .BindTo(ViewBag.vbSpecializations)
+                    )
+                </div>
+            </div>
+            <div class="card-footer">
+                <button type="submit" id="btnSave" class="btn btn-sm btn-primary"><i class="icons icon-check"></i>&nbsp;Հիշել</button>
+                <button type="button" class="btn btn-sm btn-secondary" onclick="location.href='@Url.Action("Index", "Judge")'"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>
+                @Html.ValidationSummary("Առկա են խնդիրներ")
+            </div>
+        </div>
+    </div>
+}
+<div id="errors"> </div>
+
+<script>
+    $(".validation-summary-errors").addClass("bg-warning")
+    $("form").kendoValidator({
+        errorTemplate: '<div class="k-widget k-tooltip k-tooltip-validation" style="margin:0.5em; padding:3px 5px;"><span class="fa fa-exclamation-triangle"></span> #=message#<div class="k-callout k-callout-n"></div></div>', // change the default message container to show only an *
+        validate: function (e) { // handle the validate event to build the error list
+            var html = "";
+            if (!e.valid) {
+
+
+                var errors = this.errors();
+                html += "<ul>";
+                for (var i = 0; i < errors.length; i++) {
+                    html += "<li>" + errors[i] + "</li>";
+                }
+
+                html += "</ul>";
+            }
+            $("#errors").empty().append($(html));
+        }
+    });
+</script>
