--- a/stvsystem/stvsystem/Views/Judge/DeleteConfirmation.cshtml
+++ b/stvsystem/stvsystem/Views/Judge/DeleteConfirmation.cshtml
@@ -1,7 +1,38 @@
-﻿
+﻿@model stvsystem.Data.JudgeItem
 @{
-    ViewData["Title"] = "DeleteConfirmation";
+    ViewData["Title"] = "Հեռացնել";
+    Layout = "~/Views/Shared/_LayoutNull.cshtml";
 }
+<div class="container-maxwidth500">
+    <div class="card">
+        <div class="card-header">Համոզված ե՞ք որ ցանկանում եք հեռացնել նշված գրառումը</div>
+        <div class="card-body">
+            <div class="form-group">
+                @Html.LabelFor(model => model.FirstName, new { @class = "control-label delete-label" })
+                <br />
+                @Html.DisplayFor(model => model.FirstName) 
+                @Html.DisplayFor(model => model.MiddleName) 
+                @Html.DisplayFor(model => model.LastName)
+            </div>
+            <hr />
+            <div class="form-group">
+                @Html.LabelFor(model => model.GenderID, new { @class = "control-label delete-label" }):
+                @Html.DisplayFor(model => model.GenderID)
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.CourtID, new { @class = "control-label delete-label" }):
+                @Html.DisplayFor(model => model.CourtID)
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.SpecializationID, new { @class = "control-label delete-label" }):
+                @Html.DisplayFor(model => model.SpecializationID)
+            </div>
+        </div>
+        <div class="card-footer">
+            <a href="@Url.Action("Delete", "Judge", new {id = Model.JudgeID })" class="btn btn-sm btn-danger"><i class="icons icon-trash"></i>&nbsp;Հեռացնել</a>
+            <button type="button" class="btn btn-sm btn-secondary" onclick="location.href='@Url.Action("Index", "Judge")'"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>
+        </div>
+    </div>
+</div>
 
-<h2>DeleteConfirmation</h2>
 
