--- a/stvsystem/stvsystem/Views/Shared/_LayoutNull.cshtml
+++ b/stvsystem/stvsystem/Views/Shared/_LayoutNull.cshtml
@@ -62,61 +62,14 @@
         <div id="status"></div>
     </div>
     <header class="app-header navbar">
-
-        <button class="navbar-toggler mobile-sidebar-toggler d-lg-none mr-auto" type="button">☰</button>
+        @*<button class="navbar-toggler mobile-sidebar-toggler d-lg-none mr-auto" type="button">☰</button>*@
         <a class="navbar-brand" href="@Url.Action("", "")">STV</a>
-        <button class="navbar-toggler sidebar-minimizer d-md-down-none" type="button">☰</button>
-        <span class="nav-link">@ViewData["Title"]</span>
-        <ul class="nav navbar-nav d-md-down-none"></ul>
-        <ul class="nav navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-                @*@Html.Partial("_LoginPartial")*@
-            </li>
-        </ul>
+        @*<button class="navbar-toggler sidebar-minimizer d-md-down-none" type="button">☰</button>
+        <span class="nav-link">@ViewData["Title"]</span>*@
     </header>
-
-    <div class="app-body">
-        <div class="sidebar">
-            <nav class="sidebar-nav">
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Setting")"><i class="fa fa-cog"></i> Կարգավորումներ</a>
-                    </li>
-                    <li class="divider"></li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Candidate")"><i class="fa fa-circle-thin"></i> Թեկնածուներ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Judge")"><i class="fa fa-circle-thin"></i> Դատական խորհուրդ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Credential")"><i class="fa fa-circle-thin"></i> Ծածկագրեր</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Monitoring")"><i class="fa fa-circle-thin"></i> Մոնիթորինգ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Summary")"><i class="fa fa-circle-thin"></i> Տվյալների ամփոփում</a>
-                    </li>
-                    <li class="divider"></li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Management")"><i class="fa fa-cogs"></i> Կառավարում</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <!-- Main content -->
-        <main class="main">
-            <div class="container-fluid">
-                <div class="animated fadeIn">
-                    @RenderBody()
-                </div>
-            </div>
-        </main>
-    </div>
-    <footer class="app-footer" style="text-align:center">
-        @*<a href="http://hcav.am/" target="_blank">Հելսինկյան Քաղաքացիական Ասամբլեայի Վանաձորի գրասենյակ &copy; @DateTime.Now.Year</a>*@
-    </footer>
+    <main style="padding-top: 70px;">
+        @RenderBody()
+    </main>
 
     <environment include="Development">
         @*Plugins*@
