--- a/stvsystem/stvsystem/Views/Judge/DeleteConfirmation.cshtml
+++ b/stvsystem/stvsystem/Views/Judge/DeleteConfirmation.cshtml
@@ -16,16 +16,16 @@
             </div>
             <hr />
             <div class="form-group">
-                @Html.LabelFor(model => model.GenderID, new { @class = "control-label delete-label" }):
-                @Html.DisplayFor(model => model.GenderID)
+                @Html.LabelFor(model => model.GenderName, new { @class = "control-label delete-label" }):
+                @Html.DisplayFor(model => model.GenderName)
             </div>
             <div class="form-group">
-                @Html.LabelFor(model => model.CourtID, new { @class = "control-label delete-label" }):
-                @Html.DisplayFor(model => model.CourtID)
+                @Html.LabelFor(model => model.CourtName, new { @class = "control-label delete-label" }):
+                @Html.DisplayFor(model => model.CourtName)
             </div>
             <div class="form-group">
-                @Html.LabelFor(model => model.SpecializationID, new { @class = "control-label delete-label" }):
-                @Html.DisplayFor(model => model.SpecializationID)
+                @Html.LabelFor(model => model.SpecializationName, new { @class = "control-label delete-label" }):
+                @Html.DisplayFor(model => model.SpecializationName)
             </div>
         </div>
         <div class="card-footer">
