--- a/stvsystem/stvsystem/Views/Shared/_Layout.cshtml
+++ b/stvsystem/stvsystem/Views/Shared/_Layout.cshtml
@@ -100,6 +100,10 @@
                     </li>
                     <li class="divider"></li>
                     <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Index", "Selection")"><i class="fa fa-circle-thin"></i> Ընտրություն</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Index", "Management")"><i class="fa fa-cogs"></i> Կառավարում</a>
                     </li>
                 </ul>
