--- a/stvsystem/stvsystem/Views/Selection/ConfirmSelection.cshtml
+++ b/stvsystem/stvsystem/Views/Selection/ConfirmSelection.cshtml
@@ -32,8 +32,8 @@
                     {
                         <div class="form-group">
                             @*@Html.LabelFor(model => model.Candidate1ID)*@
-                            <label class="control-label">1-ին նախընտրելի թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate1ID)
+                            <label class="control-label">1-ին թեկնածու։ </label>
+                            @Html.DisplayFor(model => model.Candidate1Name)
                         </div>
                     }
                 }
@@ -43,8 +43,8 @@
                     {
                         <div class="form-group">
                             @*@Html.LabelFor(model => model.Candidate2ID)*@
-                            <label class="control-label">2-րդ նախընտրելի թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate2ID)
+                            <label class="control-label">2-րդ թեկնածու։ </label>
+                            @Html.DisplayFor(model => model.Candidate2Name)
                         </div>
                     }
                 }
@@ -54,8 +54,8 @@
                     {
                         <div class="form-group">
                             @*@Html.LabelFor(model => model.Candidate3ID)*@
-                            <label class="control-label">3-րդ նախընտրելի թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate3ID)
+                            <label class="control-label">3-րդ թեկնածու։ </label>
+                            @Html.DisplayFor(model => model.Candidate3Name)
                         </div>
                     }
                 }
@@ -65,8 +65,8 @@
                     {
                         <div class="form-group">
                             @*@Html.LabelFor(model => model.Candidate4ID)*@
-                            <label class="control-label">4-րդ նախընտրելի թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate4ID)
+                            <label class="control-label">4-րդ թեկնածու։ </label>
+                            @Html.DisplayFor(model => model.Candidate4Name)
                         </div>
                     }
                 }
@@ -76,8 +76,8 @@
                     {
                         <div class="form-group">
                             @*@Html.LabelFor(model => model.Candidate5ID)*@
-                            <label class="control-label">5-րդ նախընտրելի թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate5ID)
+                            <label class="control-label">5-րդ թեկնածու։ </label>
+                            @Html.DisplayFor(model => model.Candidate5Name)
                         </div>
                     }
                 }
@@ -87,8 +87,8 @@
                     {
                         <div class="form-group">
                             @*@Html.LabelFor(model => model.Candidate6ID)*@
-                            <label class="control-label">6-րդ նախընտրելի թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate6ID)
+                            <label class="control-label">6-րդ թեկնածու։ </label>
+                            @Html.DisplayFor(model => model.Candidate6Name)
                         </div>
                     }
                 }
@@ -98,8 +98,8 @@
                     {
                         <div class="form-group">
                             @*@Html.LabelFor(model => model.Candidate7ID)*@
-                            <label class="control-label">7-րդ նախընտրելի թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate7ID)
+                            <label class="control-label">7-րդ թեկնածու։ </label>
+                            @Html.DisplayFor(model => model.Candidate7Name)
                         </div>
                     }
                 }
@@ -109,8 +109,8 @@
                     {
                         <div class="form-group">
                             @*@Html.LabelFor(model => model.Candidate8ID)*@
-                            <label class="control-label">8-րդ նախընտրելի թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate8ID)
+                            <label class="control-label">8-րդ թեկնածու։ </label>
+                            @Html.DisplayFor(model => model.Candidate8Name)
                         </div>
                     }
                 }
@@ -120,8 +120,8 @@
                     {
                         <div class="form-group">
                             @*@Html.LabelFor(model => model.Candidate9ID)*@
-                            <label class="control-label">3-րդ նախընտրելի թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate9ID)
+                            <label class="control-label">3-րդ թեկնածու։ </label>
+                            @Html.DisplayFor(model => model.Candidate9Name)
                         </div>
                     }
                 }
@@ -131,8 +131,8 @@
                     {
                         <div class="form-group">
                             @*@Html.LabelFor(model => model.Candidate10ID)*@
-                            <label class="control-label">10-րդ նախընտրելի թեկնածու։ </label>
-                            @Html.DisplayFor(model => model.Candidate10ID)
+                            <label class="control-label">10-րդ թեկնածու։ </label>
+                            @Html.DisplayFor(model => model.Candidate10Name)
                         </div>
                     }
                 }
