--- a/stvsystem/stvsystem/Views/Candidate/Index.cshtml
+++ b/stvsystem/stvsystem/Views/Candidate/Index.cshtml
@@ -1,7 +1,146 @@
-﻿
+﻿@model stvsystem.Data.CandidateItem
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Թեկնածուներ";
 }
 
-<h2>Index</h2>
+<div class="for-Toolbar">
+    @(Html.Kendo().ToolBar()
+    .Name("ToolBar")
+    .Items(items =>
+    {
+        items.Add().Template("<button type=\"button\" name=\"Insert\" onclick=\"InsertCandidate()\" class=\"btn btn-primary btn-sm\"><i class=\"fa fa-plus\"></i>&nbsp; Ավելացնել</button>");
+    })
+    )
+    @* Search Panel - Right Slide *@
+    <div class="right-slidePanel">
+        <div class="slidePanel-Content">
+            <div class="slidePanel-btn">
+            </div>
+            <div class="slidePanel-Content-fields create-item">
+                <h4>Որոնման դաշտեր</h4>
+                <div class="form-group margin-10-0">
+                    @Html.Kendo().TextBoxFor(model => model.FirstName).HtmlAttributes(new { placeholder = "անուն" })
+                </div>
+                <div class="form-group margin-10-0">
+                    @Html.Kendo().TextBoxFor(model => model.LastName).HtmlAttributes(new { placeholder = "ազգանուն" })
+                </div>
+                <div class="form-group margin-10-0 align-right">
+                    <button type="submit" id="btnSearch" class="btn btn-primary btn-sm" onclick="return Search();"><i class="icons icon-magnifier"></i>&nbsp;Որոնել</button>
+                    <button type="submit" id="btnClear" class="btn btn-secondary btn-sm" onclick="return Clear();"><i class="icons icon-close"></i>&nbsp;Մաքրել</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
+<script type="text/javascript">
+    function Search() {
+        $("#grCandidate").data("kendoGrid").dataSource.read();
+        return false;
+    }
+
+    function Clear() {
+        $("#FirstName").val("");
+        $("#LastName").val("");
+        $("#grCandidate").data("kendoGrid").dataSource.read();
+        return false;
+    }
+
+    function getParameters() {
+        return {
+            firstName: $("#FirstName").val(),
+            lastName: $("#LastName").val()
+        };
+    }
+
+    function InsertCandidate() {
+        window.location = '@Url.Action("Template", "Candidate")';
+    }
+
+    function UpdateCandidate(e) {
+        var row = $(e.target).closest("tr");
+        var grid = $("#grCandidate").data("kendoGrid");
+        var dataItem = grid.dataItem(row);
+        window.location = '@Url.Action("Template", "Candidate")/?candidateID=' + dataItem.CandidateID;
+    }
+
+    function DeleteCandidate(e) {
+        var row = $(e.target).closest("tr");
+        var grid = $("#grCandidate").data("kendoGrid");
+        var dataItem = grid.dataItem(row);
+        window.location = '@Url.Action("DeleteConfirmation", "Candidate")/?candidateID=' + dataItem.CandidateID;
+    }
+
+
+    @*function DeleteCandidate(e) {
+        var row = $(e.target).closest("tr");
+        var grid = $("#grResident").data("kendoGrid");
+        var dataItem = grid.dataItem(row);
+        var r = confirm("Համոզված ե՞ք, որ ցանկանում եք հեռացնել քաղաքացու գրառումը");
+        if (r == false) {
+            return false;
+        }
+        var rt = false;
+        var dt;
+        var q = $.ajax({
+            url: '@Url.Action("DeleteResident", "Resident")',
+            dataType: "json",
+            type: "GET",
+            data: { ResidentID: dataItem.ResidentID },
+            async: false,
+            success: function (data) { dt = data; rt = true; },
+            error: function (xhr) { dt = xhr; rt = false; }
+        });
+        if (rt == true) {
+            if (dt != "DELETE_SUCCESS") {
+                alert(JSON.stringify(dt));
+            }
+            else {
+                $("#grResident").data("kendoGrid").dataSource.read();
+            }
+        }
+        else {
+            alert(dt);
+            return false;
+        }
+        return false;
+    }*@
+
+
+</script>
+
+@(Html.Kendo().Grid<stvsystem.Data.CandidateItem>()
+          .Name("grCandidate")
+          .NoRecords(n => n.TemplateId("no-records-template-id"))
+          .Columns(columns =>
+          {
+              columns.Bound(c => c.CandidateName);
+              columns.Bound(c => c.BirthDate).Width(120).HtmlAttributes(new { style = "text-align: center"});
+              //columns.Bound(c => c.GenderName).MinScreenWidth(768).HtmlAttributes(new { style = "text-align:center" });
+              columns.Bound(c => c.GenderName).Width(100).HtmlAttributes(new { style = "text-align: center" }); ;
+              columns.Bound(c => c.CourtName);
+              columns.Bound(c => c.SpecializationName);
+              columns.Command(commands =>
+              {
+                  commands.Custom("cmdUpdateCandidate").Text(" ").Click("UpdateCandidate").HtmlAttributes(new { @class = "Update_Icon" });
+                  commands.Custom("cmdDeleteCandidate").Text(" ").Click("DeleteCandidate").HtmlAttributes(new { @class = "Delete_Icon" });
+              }).Title("Հրամաններ").Width(120);
+          })
+          .Events(e => e.DataBound("showCommandIcons"))
+          .Sortable()
+          .Resizable(resize => resize.Columns(true))
+          .Scrollable()
+          .Reorderable(reorder => reorder.Columns(true))
+          .Pageable(pager => pager.PageSizes(new[] { 10, 15, 25, 50, 100 }))
+          .DataSource(dataSource => dataSource
+              .Ajax()
+              .Events(events => events.Error("error_handler"))
+              .Read(read => read.Action("FilterCandidate", "Candidate").Data("getParameters"))
+          )
+)
+
+
+
+<script id="no-records-template-id" type="text/x-kendo-template">
+    <div class="k-grid-norecords-template">Գրառումներ առկա չեն</div>
+</script>
