--- a/stvsystem/stvsystem/Views/Shared/_Layout.cshtml
+++ b/stvsystem/stvsystem/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
               asp-fallback-href="~/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous" asp-fallback-src="~/lib/jquery/dist/jquery.min.js"></script>
+                crossorigin="anonymous" asp-fallback-src="~/lib/jquery/dist/jquery.min.js"></script>
     </environment>
 
     @*Kendo Styles*@
@@ -39,7 +39,7 @@
     <environment include="Staging,Production">
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
-    
+
 
     @*Kendo Scripts*@
     @*<script src="https://kendo.cdn.telerik.com/2017.3.1018/js/jquery.min.js"></script>*@
@@ -105,6 +105,15 @@
                     <li class="divider"></li>
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Index", "Management")"><i class="fa fa-cogs"></i> Կառավարում</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li class="nav-item nav-dropdown">
+                        <a class="nav-link nav-dropdown-toggle" href="#"><i class="fa fa-database"></i> Շտեմարաններ</a>
+                        <ul class="nav-dropdown-items">
+                            <li class="nav-item">
+                                <a class="nav-link" href="@Url.Action("Index", "Court")"><i class="fa fa-dot-circle-o"></i> Դատարան</a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </nav>
